hydroflow/tests/compile-fail/surface_partition_port_duplicate.stderr
error: Output connection conflicts with below ($DIR/tests/compile-fail/surface_partition_port_duplicate.rs:15:22) (1/2)
  --> tests/compile-fail/surface_partition_port_duplicate.rs:14:22
   |
14 |         my_partition[c] -> for_each(std::mem::drop);
   |                      ^

error: Output connection conflicts with above ($DIR/tests/compile-fail/surface_partition_port_duplicate.rs:14:22) (2/2)
  --> tests/compile-fail/surface_partition_port_duplicate.rs:15:22
   |
15 |         my_partition[c] -> for_each(std::mem::drop);
   |                      ^
